--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,39 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+/* custom */
+html,
+body,
+#root {
+  height: 100vh;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.content {
+  padding-top: 30px;
+}
+
+.about-animate {
+  height: 2px;
+  background: #03a9f4;
+  position: fixed;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform-origin: 0%;
 }
